Bug 1361617: Remove unused member var nsFlexContainerFrame::mChildrenHaveBeenReordered. r=mats

MozReview-Commit-ID: Iqk85piO9gT